<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">



    <ImageView
        android:id="@+id/play_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/play_background"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_back"

        />


    <ImageView
        android:id="@+id/icon_blue"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/icon_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/balloon_blue0001" />


    <ImageView
        android:id="@+id/icon_green"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/icon_green"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/balloon_green0001" />

    <ImageView
        android:id="@+id/icon_purple"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/icon_purple"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/balloon_purple0001" />

    <ImageView
        android:id="@+id/icon_red"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/icon_red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/balloon_red0001" />

    <ImageView
        android:id="@+id/icon_yellow"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/icon_yellow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/balloon_yellow0001" />

    <ImageView
        android:id="@+id/explain1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/explain_text"
        android:visibility="invisible"

        app:srcCompat="@drawable/explain_visual" />

    <TextView
        android:id="@+id/explain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:text="@string/explain_text"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageButton
        android:id="@+id/next1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_blue"
        android:scaleType="fitXY"
        android:visibility="invisible"
        android:onClick="onClickButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/next1" />

    <ImageButton
        android:id="@+id/balloon_button_blue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_blue"
        android:scaleType="fitXY"
        android:visibility="invisible"
        android:onClick="onClickButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_blue0001" />

    <ImageButton
        android:id="@+id/balloon_button_green"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_green"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_green0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_purple"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_purple"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_purple0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_red"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_red"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_red0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_yellow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_yellow"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="onClickButton"
        app:srcCompat="@drawable/balloon_yellow0001"
        android:visibility="invisible"
        />

    <ImageButton
        android:id="@+id/balloon_button_blue1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_blue"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_blue0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_green1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_green"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_green0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_purple1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_purple"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_purple0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_red1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_red"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_red0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_yellow1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_yellow"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="onClickButton"
        app:srcCompat="@drawable/balloon_yellow0001"
        android:visibility="invisible"
        />
    <ImageButton
        android:id="@+id/balloon_button_blue2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_blue"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_blue0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_green2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_green"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_green0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_purple2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_purple"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_purple0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_red2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_red"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_red0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_yellow2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_yellow"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="onClickButton"
        app:srcCompat="@drawable/balloon_yellow0001"
        android:visibility="invisible"
        />
    <ImageButton
        android:id="@+id/balloon_button_blue3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_blue"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_blue0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_green3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_green"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_green0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_purple3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_purple"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_purple0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_red3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_red"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/balloon_red0001"
        android:visibility="invisible"
        android:onClick="onClickButton"/>

    <ImageButton
        android:id="@+id/balloon_button_yellow3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/button_yellow"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="onClickButton"
        app:srcCompat="@drawable/balloon_yellow0001"
        android:visibility="invisible"
        />


</android.support.constraint.ConstraintLayout>